--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 #map {
-    height: 400px; /* The height is 400 pixels */
-    width: 100%; /* The width is the width of the web page */
+    height: 95vh;
+    width: 99vw; 
 }
