--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,22 @@
+*, *::before, *::after{
+    box-sizing: border-box;
+}
+
+header{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    height: auto;
+}
+
 #map {
     height: 95vh;
     width: 100%;
+    margin-top: 5vh;
 }
