--- a/contactStyles.css
+++ b/contactStyles.css
@@ -59,16 +59,22 @@ form{
     width: 40vw;
 }
 
-form h2{
+form h1{
     justify-content: center;
     align-items: center;
     margin-bottom: 10vh;
 }
 
-form input{
+.displayMessage{
+    margin-bottom: 5vh;
+}
+
+form textarea{
+    font-family: 'poppins', sans-serif;
+    font-size: 1em;
     width: 100%;
     height: 30vh;
-    margin-top: 0vh;
+    padding-top:10px;
     margin-bottom: 2vh;
     padding-left: 1em;
     outline: none;
