--- a/client/indexStyles.css
+++ b/client/indexStyles.css
@@ -100,6 +100,10 @@ header .navbarLinks ul li a{
         text-align: center;
     }
 
+    header .navbarLinks.active{
+        display: flex;
+    }
+
     .hamburgerToggle{
         display: flex;
     }
