--- a/client/contactFormStyles.css
+++ b/client/contactFormStyles.css
@@ -17,13 +17,14 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40vw;
+    width: 60vw;
 }
 
 form h1{
     justify-content: center;
     align-items: center;
-    margin-bottom: 10vh;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .displayMessage{
