--- a/client/ratingFormStyles.css
+++ b/client/ratingFormStyles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 
+
 body{
     font-family: 'poppins', sans-serif;
     display: flex;
@@ -23,6 +24,8 @@ form h1{
     justify-content: center;
     align-items: center;
     margin-bottom: -1vh;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .tempContainer, .flowContainer{
