Made submit buttons wider for mobile

--- a/client/contactFormStyles.css
+++ b/client/contactFormStyles.css
@@ -146,4 +146,8 @@ header .navbarLinks ul li a{
     .hamburgerToggle{
         display: flex;
     }
+
+    form button{
+        width: 30vw;
+    }
 }
