--- a/client/ratingFormStyles.css
+++ b/client/ratingFormStyles.css
@@ -168,4 +168,8 @@ header .navbarLinks ul li a{
     .hamburgerToggle{
         display: flex;
     }
+
+    form button{
+        width: 30vw;
+    }
 }
